--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 		"@types/chai": "^4.1.3",
 		"@types/mocha": "^5.2.0",
 		"chai": "^4.1.2",
+		"chai-as-promised": "^7.1.1",
 		"mocha": "^5.1.1",
 		"ts-node": "^6.0.3",
 		"typescript": "^2.8.3"
