--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
 	"dependencies": {
 		"@types/chai": "^4.1.3",
+		"@types/chai-as-promised": "^7.1.0",
 		"@types/mocha": "^5.2.0",
 		"chai": "^4.1.2",
 		"chai-as-promised": "^7.1.1",
