--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
 	"dependencies": {
-		"@types/chai": "^4.1.3",
-		"@types/chai-as-promised": "^7.1.0",
+		"typescript": "^4.7.4"
+	},
+	"devDependencies": {
+		"@types/chai": "^4.3.3",
+		"@types/chai-as-promised": "^7.1.5",
 		"@types/mocha": "^5.2.0",
-		"chai": "^4.1.2",
+		"chai": "^4.3.6",
 		"chai-as-promised": "^7.1.1",
-		"mocha": "^5.2.0",
-		"ts-node": "^6.0.3",
-		"typescript": "^3.9.5"
+		"mocha": "^10.0.0",
+		"ts-node": "^10.9.1"
 	},
 	"scripts": {
 		"test": "mocha -r ts-node/register src/**/*.spec.ts"
